# doc-intel

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: dependencies.py  main.py
api/routes/: __init__.py  extract.py  health.py  ingest.py  search.py
chunking/: __init__.py  base.py  hierarchical.py
config/: settings.py
connectors/: __init__.py  azure_blob.py  base.py  google_drive.py
dashboard/: app.py
doc_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
embedding/: __init__.py  embedder.py
enrichment/: __init__.py  classifier.py  ner.py  openie.py
models/: __init__.py  document.py  enriched.py  extraction.py  job.py  metrics.py  ocr.py  search.py
ocr/: __init__.py  base.py  detector.py  rapidocr_engine.py
parsers/: __init__.py  base.py  docx_parser.py  image_parser.py  pdf_parser.py  router.py
pipeline/: __init__.py  job_runner.py  job_tracker.py  orchestrator.py
storage/: __init__.py  base_metadata_store.py  base_raw_store.py  base_vector_store.py  metadata_store.py  metrics_repository.py  raw_store.py  vector_store.py
utils/: __init__.py  async_helpers.py  file_hash.py  mime.py  pdf_utils.py
