[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-intel"
version = "0.1.0"
description = "Document Intelligence System POC"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Awais Yaqoob" }
]

dependencies = [
    # API
    "fastapi>=0.118,<1.0",
    "uvicorn[standard]>=0.37,<1.0",

    # Config
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",

    # Database
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.16,<2.0",

    # Vector DB
    "qdrant-client>=1.18,<2.0",

    # Embeddings
    "sentence-transformers>=5.0,<6.0",

    # Document Parsing
    "docling>=2.97,<3.0",

    # OCR
    "rapidocr-onnxruntime>=1.4.4",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",

    # NER
    "gliner>=0.2.26,<0.3",

    # Google Drive
    "google-api-python-client>=2.0,<3.0",
    "google-auth>=2.40,<3.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "google-auth-httplib2>=0.2,<1.0",

    # Azure Blob Storage
    "azure-storage-blob>=12.20,<13.0",
    "azure-identity>=1.17,<2.0",

    # LLM
    "groq>=0.30,<1.0",

    # Dashboard
    "streamlit>=1.49,<2.0",

    # Utilities
    "tenacity>=9.1,<10.0",
    "httpx>=0.28,<1.0",
    "aiofiles>=24.1,<25.0",
    "python-multipart>=0.0.20",
    "orjson>=3.11,<4.0",
    "structlog>=25.4,<26.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1",
    "ruff>=0.12",
    "mypy>=1.17",
    "pytest>=8.4",
    "pytest-asyncio>=1.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "ocr*",
    "models*",
    "config*",
    "parsers*",
    "storage*",
    "pipeline*",
    "chunking*",
    "embedding*",
    "dashboard*",
    "enrichment*",
    "connectors*"
]